--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -1220,6 +1220,11 @@ Wrapper on lw6sys_build_get_enable_gtk.
 Wrapper on lw6sys_build_get_enable_instrument.
 @end deffn
 
+@subsection c-lw6sys-build-get-enable-mod-caca
+@deffn {C function exported to Guile} @code{c-lw6sys-build-get-enable-mod-caca}
+Wrapper on lw6sys_build_get_enable_mod_caca.
+@end deffn
+
 @subsection c-lw6sys-build-get-enable-mod-csound
 @deffn {C function exported to Guile} @code{c-lw6sys-build-get-enable-mod-csound}
 Wrapper on lw6sys_build_get_enable_mod_csound.
