--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-04 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed ugly segfault in libcaca bootstrap.
+
 2012-10-03 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added empty gfx module, linked on libcaca.
