--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -325,6 +325,18 @@ should rely on algorithm/ker-side kept values.
 @strong{Return value:}  the seq.
 @end deftypefun
 
+@deftypefun {int} {lw6p2p_node_is_seed_needed} (lw6p2p_node_t * @var{node})
+@var{node}:  node to query
+
+Returns true (1) if the local node needs to send a SEED message.
+A SEED message will basically be sent at the beginning of a session
+when a client connects to a server. Basically this message is of
+no use but it's interesting to have a short message (not DUMP) to
+start with.
+
+@strong{Return value:}  1 if SEED must be sent.
+@end deftypefun
+
 @deftypefun {int} {lw6p2p_node_is_dump_needed} (lw6p2p_node_t * @var{node})
 @var{node}:  node to query
 
