--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-12 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Now able to process DUMP messages without an existing pilot.
+
 2012-10-10 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed #37429, introduced SEED (problem was pilot commit in test).
