--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -1045,6 +1045,11 @@ Wrapper on lw6pil_local_cursors_set_mouse_controlled.
 Wrapper on lw6pil_make_backup.
 @end deffn
 
+@subsection c-lw6pil-poll-dump
+@deffn {C function exported to Guile} @code{c-lw6pil-poll-dump}
+Wrapper on lw6pil_poll_dump.
+@end deffn
+
 @subsection c-lw6pil-seed-command-generate
 @deffn {C function exported to Guile} @code{c-lw6pil-seed-command-generate}
 Wrapper on lw6pil_seed_command_generate.
