--- a/liquidwar6/doc/liquidwar6-gdoc.texi
+++ b/liquidwar6/doc/liquidwar6-gdoc.texi
@@ -208,9 +208,9 @@ Register the functions of the tsk module, make them callable from Guile.
 @end deftypefun
 
 @deftypefun {int} {lw6_init_global} (int @var{argc}, const char * [] @var{argv})
+@var{argc}:  number of args as passed to main
 
-argc: number of args as passed to main
-argv: array of strings as passed to main
+@var{argv}:  array of strings as passed to main
 
 Initializes global values to their defaults.
 
@@ -218,9 +218,6 @@ Initializes global values to their defaults.
 @end deftypefun
 
 @deftypefun {void} {lw6_quit_global} ()
-
-argc: number of args as passed to main
-argv: array of strings as passed to main
 
 Frees global values. Will also garbage collect objects
 in case Guile failed to do it perfectly (or we failed to
