--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -518,6 +518,13 @@ Please take a look at the
 @uref{http://savannah.gnu.org/bugs/?group=liquidwar6, bug list}
 before submitting new bugs.
 
+@subsection IRC channel
+
+IRC can be an interesting alternative to mailing-lists.
+There's an open channel dedicated to Liquid War on freenode.net,
+you can access it on @uref{irc://irc.freenode.net/liquidwar} that is,
+channel @code{#liquidwar} on irc.freenode.net.
+
 @c ---------------------------------------------------------------------------
 @c Getting the game
 @c ---------------------------------------------------------------------------
@@ -6278,6 +6285,8 @@ you need here:
 @uref{http://lists.gnu.org/archive/html/help-liquidwar6/}: Mailing-list archives
 @item
 @uref{http://ufoot.org:8056/}: Permanent ``seed'' server running latest snapshot
+@item
+@uref{irc://irc.freenode.net/liquidwar}: IRC channel @code{#liquidwar} on irc.freenode.net
 @end itemize
 
 @appendixsec Other sites
