--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-19 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Started to implement pil ref test suite for complex network cases.
+
 2012-10-13 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Test client now gets the dump and is able to build objects from it.
