--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-21 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Enhanced builtin map creation so that it fits pil test suite.
+
 2012-10-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Started to implement pil ref test suite for complex network cases.
