--- a/liquidwar6/doc/pil-gdoc.texi
+++ b/liquidwar6/doc/pil-gdoc.texi
@@ -643,6 +643,24 @@ random, this way this is one less bug to check in networked context.
 @strong{Return value:}  random integer value, always greater than INT_MAX
 @end deftypefun
 
+@deftypefun {int} {lw6pil_suite_init} (lw6pil_pilot_t ** @var{pilot}, lw6ker_game_state_t ** @var{game_state}, lw6ker_game_struct_t ** @var{game_struct}, lw6map_level_t ** @var{level}, int64_t @var{timestamp})
+@var{pilot}:  pilot to run test suite (out param)
+
+@var{game_state}:  game state to run test suite (out param)
+
+@var{game_struct}:  game struct to run test suite (out param)
+
+@var{level}:  level to run test suite (out param)
+
+@var{timestamp}:  timestamp used for pilot creation (should be "now")
+
+Build the objects used by the test suite. The idea is to wrap all this
+in a single function since it requires to be exactly the same every time
+as the test suite is very pedantic about checksums.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
 @deftypefun {int64_t} {lw6pil_suite_get_seq_0} ()
 
 Get the base seq_0 for the reference test suite.
